# python-task-manager

./: .env.docker  .env.example  .gitignore  2.2.1  DATABASE_STRUCTURE.md  Dockerfile  README.md  alembic.ini  alembic_runner.py  docker-compose.yml  pyproject.toml  requirements.txt  show_database.py
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  tasks.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: task.py  user.py
app/schemas/: auth.py  task.py  user.py
app/services/: auth_service.py  task_service.py
migrations/: env.py
migrations/versions/: 6196e34e17ee_init.py
seeds/: seed_data.py
tests/: conftest.py  test_auth.py  test_tasks.py
